--- a/style.css
+++ b/style.css
@@ -861,3 +861,10 @@ footer {
   font-size: 0.95rem;
   border: 1px solid #21c6c6;
 }
+
+.sub-heading {
+  margin-top: 40px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #0e0e60;
+}
