--- a/style.css
+++ b/style.css
@@ -888,4 +888,10 @@ footer {
   min-width: 220px;
   text-align: center;
 }
+
+.industry-icon {
+  width: 40px;
+  height: 40px;
+  margin-bottom: 12px;
+  opacity: 0.85;
 }
