--- a/style.css
+++ b/style.css
@@ -91,12 +91,11 @@ header {
 .hamburger-wrapper {
   position: fixed;
   top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 20px;
   z-index: 1001;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .hamburger {
@@ -760,6 +759,11 @@ footer {
   .footer-bottom p {
     font-size: 11px;
   }
+}
+
+.hamburger {
+  display: none;
+  /* other styles like font-size, position, etc. */
 }
 
 
